crates/core/tests/snapshots/markdown_ast_golden__golden_changelog_insert_added_end.snap
---
source: crates/core/tests/markdown_ast_golden.rs
expression: result.content
---
# Changelog

All notable changes to this project will be documented in this file.

## Unreleased

## 1.0.0 - 2024-01-15

### Added

- Initial release
- Basic functionality

<!-- end list -->

- Another new feature

### Fixed

- Nothing yet
