crates/core/tests/snapshots/markdown_ast_golden__golden_changelog_insert_unreleased_begin.snap
---
source: crates/core/tests/markdown_ast_golden.rs
expression: result.content
---
# Changelog

All notable changes to this project will be documented in this file.

## Unreleased

### Added

- New feature from test

## 1.0.0 - 2024-01-15

### Added

- Initial release
- Basic functionality

### Fixed

- Nothing yet
