crates/core/tests/snapshots/markdown_ast_golden__golden_complex_document_preserves_formatting.snap
---
source: crates/core/tests/markdown_ast_golden.rs
expression: result.content
---
# Changelog

## Unreleased

### Added

- Feature with `inline code`
- Feature with [link](https://example.com)

<!-- end list -->

- Complex item with `code` and **bold**

### Changed

``` rust
// Code block that should be preserved
fn example() {
    println!("# This is not a heading");
}
```

### Deprecated

- Old API

## 2.0.0 - 2024-06-01

### Breaking Changes

| Old | New |
| --- | --- |
| foo | bar |
