crates/core/tests/snapshots/markdown_ast_golden__golden_insert_into_changed_with_code_block.snap
---
source: crates/core/tests/markdown_ast_golden.rs
expression: result.content
---
# Changelog

## Unreleased

### Added

- Feature with `inline code`
- Feature with [link](https://example.com)

### Changed

``` rust
// Code block that should be preserved
fn example() {
    println!("# This is not a heading");
}
```

- New change entry

### Deprecated

- Old API

## 2.0.0 - 2024-06-01

### Breaking Changes

| Old | New |
| --- | --- |
| foo | bar |
